upgrade to the new java facade